--- a/toolchain/toolchain-external/toolchain-external-codescape-mti-mips/Config.in
+++ b/toolchain/toolchain-external/toolchain-external-codescape-mti-mips/Config.in
@@ -11,10 +11,10 @@ config BR2_TOOLCHAIN_EXTERNAL_CODESCAPE_MTI_MIPS
 	select BR2_TOOLCHAIN_GCC_AT_LEAST_6
 	select BR2_TOOLCHAIN_HAS_FORTRAN
 	help
-	  Codescape MTI GNU Linux Toolchain 2018.09 for the MIPS architecture,
-	  from MIPS Tech LLC. It uses gcc 6.3.0, binutils 2.28.51, glibc 2.20,
-	  gdb 7.9.1 and kernel headers 4.7. It has support for the following
-	  variants:
+	  Codescape MTI GNU Linux Toolchain 2018.09 for the MIPS
+	  architecture, from MIPS Tech LLC. It uses gcc 6.3.0,
+	  binutils 2.28.51, glibc 2.20, gdb 7.9.1 and kernel headers
+	  4.7. It has support for the following variants:
 	    - MIPS32r2 - Big-Endian, Hard-Float, Legacy NaN, o32 ABI
 	      Select 'MIPS (big endian)' Target Architecture
 	      Select 'mips 32r2' Target Architecture Variant
