Re-enable lan951x-led-ctl

--- a/configs/raspberrypi_defconfig
+++ b/configs/raspberrypi_defconfig
@@ -57,6 +57,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
+BR2_PACKAGE_LAN951X_LED_CTL=y
 BR2_PACKAGE_RPI_ARMMEM=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
