watch.conf: convert meyewatch_disable to uppercase

--- a/board/common/overlay/etc/watch.conf
+++ b/board/common/overlay/etc/watch.conf
@@ -10,5 +10,5 @@ netwatch_retries=3
 netwatch_timeout=5
 netwatch_interval=20
 
-#meyewatch_disable="true"
+#MEYEWATCH_DISABLE="true"
 meyewatch_timeout=120
