Backport some python packages from future BuildRoot

--- a/package/Config.in
+++ b/package/Config.in
@@ -746,10 +746,12 @@ endif
 if BR2_PACKAGE_PYTHON || BR2_PACKAGE_PYTHON3
 menu "External python modules"
 	source "package/python-aiocoap/Config.in"
+	source "package/python-aiohttp/Config.in"
 	source "package/python-alsaaudio/Config.in"
 	source "package/python-argh/Config.in"
 	source "package/python-arrow/Config.in"
 	source "package/python-asn1crypto/Config.in"
+	source "package/python-async-timeout/Config.in"
 	source "package/python-attrs/Config.in"
 	source "package/python-autobahn/Config.in"
 	source "package/python-automat/Config.in"
@@ -857,6 +859,7 @@ menu "External python modules"
 	source "package/python-mistune/Config.in"
 	source "package/python-more-itertools/Config.in"
 	source "package/python-msgpack/Config.in"
+	source "package/python-multidict/Config.in"
 	source "package/python-mutagen/Config.in"
 	source "package/python-mwclient/Config.in"
 	source "package/python-mwscrape/Config.in"
@@ -1006,6 +1009,7 @@ menu "External python modules"
 	source "package/python-xlutils/Config.in"
 	source "package/python-xlwt/Config.in"
 	source "package/python-xmltodict/Config.in"
+	source "package/python-yarl/Config.in"
 	source "package/python-yieldfrom/Config.in"
 	source "package/python-zope-interface/Config.in"
 endmenu
