--- a/package/Config.in
+++ b/package/Config.in
@@ -747,6 +747,7 @@ if BR2_PACKAGE_PYTHON || BR2_PACKAGE_PYTHON3
 menu "External python modules"
 	source "package/python-aiocoap/Config.in"
 	source "package/python-aiohttp/Config.in"
+	source "package/python-aiohttp-apispec/Config.in"
 	source "package/python-alsaaudio/Config.in"
 	source "package/python-argh/Config.in"
 	source "package/python-arrow/Config.in"
