--- a/package/Config.in
+++ b/package/Config.in
@@ -749,6 +749,7 @@ menu "External python modules"
 	source "package/python-aiohttp/Config.in"
 	source "package/python-aiohttp-apispec/Config.in"
 	source "package/python-alsaaudio/Config.in"
+	source "package/python-apispec/Config.in"
 	source "package/python-argh/Config.in"
 	source "package/python-arrow/Config.in"
 	source "package/python-asn1crypto/Config.in"
