--- a/package/Config.in
+++ b/package/Config.in
@@ -748,6 +748,7 @@ menu "External python modules"
 	source "package/python-aiocoap/Config.in"
 	source "package/python-aiohttp/Config.in"
 	source "package/python-aiohttp-apispec/Config.in"
+	source "package/python-aiohttp-swagger/Config.in"
 	source "package/python-alsaaudio/Config.in"
 	source "package/python-apispec/Config.in"
 	source "package/python-argh/Config.in"
