--- a/package/Config.in
+++ b/package/Config.in
@@ -778,6 +778,7 @@ menu "External python modules"
 	source "package/python-cherrypy/Config.in"
 	source "package/python-click/Config.in"
 	source "package/python-coherence/Config.in"
+	source "package/python-colibris/Config.in"
 	source "package/python-configobj/Config.in"
 	source "package/python-configshell-fb/Config.in"
 	source "package/python-constantly/Config.in"
