--- a/package/Config.in
+++ b/package/Config.in
@@ -804,6 +804,7 @@ menu "External python modules"
 	source "package/python-docopt/Config.in"
 	source "package/python-docutils/Config.in"
 	source "package/python-dominate/Config.in"
+	source "package/python-dotenv/Config.in"
 	source "package/python-dpkt/Config.in"
 	source "package/python-ecdsa/Config.in"
 	source "package/python-engineio/Config.in"
