--- a/package/Config.in
+++ b/package/Config.in
@@ -886,6 +886,7 @@ menu "External python modules"
 	source "package/python-pathpy/Config.in"
 	source "package/python-pathtools/Config.in"
 	source "package/python-pathvalidate/Config.in"
+	source "package/python-pbr/Config.in"
 	source "package/python-peewee/Config.in"
 	source "package/python-peewee-migrate/Config.in"
 	source "package/python-pexpect/Config.in"
