--- a/package/Config.in
+++ b/package/Config.in
@@ -998,6 +998,7 @@ menu "External python modules"
 	source "package/python-txaio/Config.in"
 	source "package/python-txtorcon/Config.in"
 	source "package/python-typepy/Config.in"
+	source "package/python-typing-extensions/Config.in"
 	source "package/python-u-msgpack/Config.in"
 	source "package/python-ubjson/Config.in"
 	source "package/python-ujson/Config.in"
