--- a/package/Config.in
+++ b/package/Config.in
@@ -831,6 +831,7 @@ menu "External python modules"
 	source "package/python-ibmiotf/Config.in"
 	source "package/python-id3/Config.in"
 	source "package/python-idna/Config.in"
+	source "package/python-idna-ssl/Config.in"
 	source "package/python-incremental/Config.in"
 	source "package/python-influxdb/Config.in"
 	source "package/python-iniparse/Config.in"
