busybox: enable su

--- a/board/common/busybox.config
+++ b/board/common/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.2
-# Wed Nov 14 23:22:52 2018
+# Fri Jan 25 20:24:12 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -525,7 +525,7 @@ CONFIG_FEATURE_NOLOGIN=y
 CONFIG_FEATURE_SECURETTY=y
 CONFIG_PASSWD=y
 # CONFIG_FEATURE_PASSWD_WEAK_CHECK is not set
-# CONFIG_SU is not set
+CONFIG_SU=y
 # CONFIG_FEATURE_SU_SYSLOG is not set
 # CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
 # CONFIG_FEATURE_SU_BLANK_PW_NEEDS_SECURE_TTY is not set
