Update date init script to use uppercase vars

--- a/board/common/overlay/etc/date.conf
+++ b/board/common/overlay/etc/date.conf
@@ -1,6 +1,6 @@
-date_timeout=10
-date_method=http
-date_host="google.com"
-date_interval=900
-date_ntp_server=""
+DATE_TIMEOUT=10
+DATE_METHOD=http
+DATE_HOST="google.com"
+DATE_INTERVAL=900
+DATE_NTP_SERVER=""
 
