--- a/configs/tinkerboard_defconfig
+++ b/configs/tinkerboard_defconfig
@@ -18,11 +18,18 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="rk3288-miniarm"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/common/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_MOTIONEYE=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_GPL=y
+BR2_PACKAGE_FFMPEG_NONFREE=y
+BR2_PACKAGE_FFMPEG_SWSCALE=y
+BR2_PACKAGE_LIBWEBCAM=y
+BR2_PACKAGE_MOTION=y
 BR2_PACKAGE_GZIP=y
 BR2_PACKAGE_JQ=y
-BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_CIFS_UTILS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_B43_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -41,9 +48,23 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
+BR2_PACKAGE_PYTHON_HASHLIB=y
+BR2_PACKAGE_PYTHON_JINJA2=y
+BR2_PACKAGE_PYTHON_PILLOW=y
+BR2_PACKAGE_PYTHON_PYCURL=y
+BR2_PACKAGE_PYTHON_PYTZ=y
+BR2_PACKAGE_PYTHON_SMBUS_CFFI=y
+BR2_PACKAGE_PYTHON_TORNADO=y
+BR2_PACKAGE_PYTHON_VERSIONTOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBSSH2=y
 BR2_PACKAGE_LIBFUSE=y
+BR2_PACKAGE_LIBV4L=y
+BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_LIBXML2=y
+BR2_PACKAGE_LIBTHEORA=y
+BR2_PACKAGE_X264=y
+BR2_PACKAGE_X265=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_CURL=y
 BR2_PACKAGE_LIBCAP=y
@@ -53,7 +74,11 @@ BR2_PACKAGE_AUTOSSH=y
 BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
-# BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
+BR2_PACKAGE_DNSMASQ=y
+# BR2_PACKAGE_DNSMASQ_TFTP is not set
+BR2_PACKAGE_HOSTAPD=y
+BR2_PACKAGE_HOSTAPD_EAP=y
+BR2_PACKAGE_HOSTAPD_WPS=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_NETCAT=y
@@ -62,6 +87,9 @@ BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
+BR2_PACKAGE_PROFTPD=y
+BR2_PACKAGE_RSYNC=y
+BR2_PACKAGE_SAMBA4=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
