--- a/package/Config.in
+++ b/package/Config.in
@@ -1265,6 +1265,7 @@ menu "Graphics"
 	source "package/harfbuzz/Config.in"
 	source "package/ijs/Config.in"
 	source "package/imlib2/Config.in"
+	source "package/intel-gmmlib/Config.in"
 	source "package/irrlicht/Config.in"
 	source "package/jasper/Config.in"
 	source "package/jpeg/Config.in"
