busybox: enable losetup

--- a/board/common/busybox.config
+++ b/board/common/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.29.2
-# Fri Jan 25 20:24:12 2019
+# Fri Feb  1 22:19:53 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -384,9 +384,9 @@ CONFIG_RESET=y
 # CONFIG_RUN_PARTS is not set
 # CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
 # CONFIG_FEATURE_RUN_PARTS_FANCY is not set
-CONFIG_START_STOP_DAEMON=y
-CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS=y
-CONFIG_FEATURE_START_STOP_DAEMON_FANCY=y
+# CONFIG_START_STOP_DAEMON is not set
+# CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS is not set
+# CONFIG_FEATURE_START_STOP_DAEMON_FANCY is not set
 CONFIG_WHICH=y
 
 #
@@ -621,7 +621,7 @@ CONFIG_HWCLOCK=y
 # CONFIG_IPCS is not set
 # CONFIG_LAST is not set
 # CONFIG_FEATURE_LAST_FANCY is not set
-# CONFIG_LOSETUP is not set
+CONFIG_LOSETUP=y
 # CONFIG_LSPCI is not set
 CONFIG_LSUSB=y
 # CONFIG_MDEV is not set
