Raspberry Pi 2, 3: initramfs: use Linaro toolchain

--- a/configs/raspberrypi2_initramfs_defconfig
+++ b/configs/raspberrypi2_initramfs_defconfig
@@ -1,14 +1,10 @@
 BR2_arm=y
-BR2_arm1176jzf_s=y
+BR2_cortex_a7=y
+BR2_ARM_FPU_NEON_VFPV4=y
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/.buildroot-ccache-raspberrypi-initramfs"
 BR2_OPTIMIZE_2=y
-BR2_STATIC_LIBS=y
-BR2_KERNEL_HEADERS_4_4=y
-# BR2_UCLIBC_INSTALL_UTILS is not set
-BR2_BINUTILS_VERSION_2_31_X=y
-BR2_GCC_VERSION_5_X=y
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_TARGET_GENERIC_HOSTNAME=""
 BR2_TARGET_GENERIC_ISSUE=""
