--- a/configs/pine64_defconfig
+++ b/configs/pine64_defconfig
@@ -64,6 +64,7 @@ BR2_PACKAGE_X264=y
 BR2_PACKAGE_X265=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_CURL=y
+BR2_PACKAGE_LIBMICROHTTPD=y
 BR2_PACKAGE_LIBCAP=y
 BR2_PACKAGE_PCRE=y
 BR2_PACKAGE_PCRE_UCP=y
