--- a/configs/nanopineo2_defconfig
+++ b/configs/nanopineo2_defconfig
@@ -4,6 +4,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/.buildroot-ccache-nanopineo2"
 BR2_OPTIMIZE_2=y
 BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_AARCH64=y
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_TZ_INFO=y
