--- a/configs/tinkerboard_defconfig
+++ b/configs/tinkerboard_defconfig
@@ -5,6 +5,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/.buildroot-ccache-tinkerboard"
 BR2_OPTIMIZE_2=y
 BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_ARM=y
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_TZ_INFO=y
