python-bluepy: fix stray char

--- a/package/python-bluepy/Config.in
+++ b/package/python-bluepy/Config.in
@@ -1,4 +1,4 @@
-\config BR2_PACKAGE_PYTHON_BLUEPY
+config BR2_PACKAGE_PYTHON_BLUEPY
 	bool "python-bluepy"
 	depends on BR2_PACKAGE_PYTHON3
 	select BR2_PACKAGE_BLUEZ5_UTILS
