Enable rng-tools package

--- a/configs/raspberrypi4_defconfig
+++ b/configs/raspberrypi4_defconfig
@@ -1,6 +1,6 @@
 BR2_arm=y
-BR2_cortex_a7=y
-BR2_ARM_FPU_NEON_VFPV4=y
+BR2_cortex_a72=y
+BR2_ARM_FPU_NEON_FP_ARMV8=y
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/.buildroot-ccache-raspberrypi4"
 BR2_OPTIMIZE_2=y
@@ -42,6 +42,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
+BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_RPI_ARMMEM=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
