--- a/configs/tinkerboard_defconfig
+++ b/configs/tinkerboard_defconfig
@@ -41,6 +41,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
+BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBSSH2=y
