--- a/configs/raspberrypi4_defconfig
+++ b/configs/raspberrypi4_defconfig
@@ -18,11 +18,42 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2711-rpi-4-b"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/common/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_MOTIONEYE=y
 BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_FFMPEG_GPL=y
+BR2_PACKAGE_FFMPEG_NONFREE=y
+BR2_PACKAGE_GSTREAMER1=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORATE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ENCODING=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEORATE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_JPEG=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MULTIPART=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_RTSP=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2_PROBE=y
+BR2_PACKAGE_GST1_PLUGINS_BAD=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FDK_AAC=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VOAACENC=y
+BR2_PACKAGE_GST1_INTERPIPE=y
+BR2_PACKAGE_GST1_LIBAV=y
+BR2_PACKAGE_GST1_RTSP_SERVER=y
+BR2_PACKAGE_GST_OMX=y
+BR2_PACKAGE_GSTREAMER1_EDITING_SERVICES=y
+BR2_PACKAGE_LIBWEBCAM=y
+BR2_PACKAGE_MOTION=y
+BR2_PACKAGE_STREAMEYE=y
 BR2_PACKAGE_GZIP=y
 BR2_PACKAGE_JQ=y
-BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_CIFS_UTILS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_B43_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -42,23 +73,41 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
+BR2_PACKAGE_LAN951X_LED_CTL=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_RPI_ARMMEM=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
+BR2_PACKAGE_PYTHON_HASHLIB=y
+BR2_PACKAGE_PYTHON_JINJA2=y
+BR2_PACKAGE_PYTHON_PICAMERA=y
+BR2_PACKAGE_PYTHON_PILLOW=y
+BR2_PACKAGE_PYTHON_PYCURL=y
+BR2_PACKAGE_PYTHON_PYTZ=y
+BR2_PACKAGE_PYTHON_RPI_GPIO=y
+BR2_PACKAGE_PYTHON_SMBUS_CFFI=y
+BR2_PACKAGE_PYTHON_TORNADO=y
+BR2_PACKAGE_PYTHON_VERSIONTOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBSSH2=y
 BR2_PACKAGE_LIBFUSE=y
+BR2_PACKAGE_LIBV4L=y
+BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_LIBTHEORA=y
+BR2_PACKAGE_X264=y
+BR2_PACKAGE_X265=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_CURL=y
 BR2_PACKAGE_LIBCAP=y
-BR2_PACKAGE_PCRE=y
-BR2_PACKAGE_PCRE_UCP=y
 BR2_PACKAGE_AUTOSSH=y
 BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
-# BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
+BR2_PACKAGE_DNSMASQ=y
+# BR2_PACKAGE_DNSMASQ_TFTP is not set
+BR2_PACKAGE_HOSTAPD=y
+BR2_PACKAGE_HOSTAPD_EAP=y
+BR2_PACKAGE_HOSTAPD_WPS=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_NETCAT=y
@@ -67,6 +116,9 @@ BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
+BR2_PACKAGE_PROFTPD=y
+BR2_PACKAGE_RSYNC=y
+BR2_PACKAGE_SAMBA4=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
