--- a/configs/raspberrypi4_defconfig
+++ b/configs/raspberrypi4_defconfig
@@ -80,6 +80,7 @@ BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
 BR2_PACKAGE_PYTHON_HASHLIB=y
 BR2_PACKAGE_PYTHON_JINJA2=y
+BR2_PACKAGE_PYTHON_PANTILTHAT=y
 BR2_PACKAGE_PYTHON_PICAMERA=y
 BR2_PACKAGE_PYTHON_PILLOW=y
 BR2_PACKAGE_PYTHON_PYCURL=y
