Raspberry Pi4: temporarily disable OMX ffmpeg support

--- a/configs/raspberrypi4_defconfig
+++ b/configs/raspberrypi4_defconfig
@@ -24,6 +24,7 @@ BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_FFMPEG_GPL=y
 BR2_PACKAGE_FFMPEG_NONFREE=y
+BR2_PACKAGE_FFMPEG_EXTRACONF="--disable-omx"
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORATE=y
