--- a/configs/orangepizero_defconfig
+++ b/configs/orangepizero_defconfig
@@ -13,7 +13,8 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/common/postscript.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.1.9"
-BR2_LINUX_KERNEL_DEFCONFIG="sunxi"
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/orangepizero/kernel.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="sun8i-h2-plus-orangepi-zero"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/common/busybox.config"
